fixed scrolling on mobile

--- a/style.css
+++ b/style.css
@@ -346,11 +346,14 @@ body{
   .GithubLink{
     font-size:0.8rem;
   }
-  .PortfolioPage, .PhotoGallery{
-    -webkit-overflow-scrolling: touch;
-  }
+  
   
  
+}
+
+.PortfolioPage, .PhotoGallery{
+  overflow-y: auto;
+  -webkit-overflow-scrolling: touch;
 }
 
 .PhotoImageContainer{
